--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "mongoose": "^5.9.12",
+    "mongoose-type-email": "^1.0.12",
+    "morgan": "~1.9.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^3.0.1",
+    "passport-local-mongoose": "^6.0.1",
+    "serve-favicon": "^2.5.0",
+    "session-file-store": "^1.4.0"
   }
 }
