--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.12",
     "mongoose-type-email": "^1.0.12",
+    "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.0",
     "passport": "^0.4.1",
     "passport-jwt": "^3.0.1",
